--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html><html lang="en"><head>
     <script src="p5.js"></script>
+    <script src="addScreenPositionFunction.js"></script>
     <script src="p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
@@ -7,6 +8,4 @@
   <body>
     <script src="sketch.js"></script>
     <div class="loader"></div>
-
-
 </body></html>
